# core

./: .gitignore  Cargo.toml  LICENSE  README.md  build-webui.sh  rove-hello.txt  rove-test.txt  secret-test.txt  test_local_brain.sh
brain/: Cargo.toml  README.md
brain/src/: adapter.rs  budget.rs  dispatch.rs  lib.rs
brain/src/dispatch/: artifacts.rs  heuristics.rs  mod.rs
brain/src/reasoning/: client.rs  completion.rs  embeddings.rs  mod.rs  transport.rs
brain/src/runtime/: discover.rs  handle.rs  launch.rs  mod.rs  probe.rs
engine/: Cargo.toml  README.md  build.rs  how_it_work.mmd
engine/docs/: CI_CD.md  MCP_PACKAGES.md  PLATFORM_SUPPORT.md  PLUGIN_AUTHORING.md  daemon_status.md  graceful_shutdown.md  host_functions_implementation.md  plugin_crash_handling.md
engine/examples/: llm_provider_example.rs  ollama_provider_example.rs  secret_manager_usage.rs  simple_task_example.rs
engine/schemas/: base.sql
engine/src/: lib.rs  main.rs  policy.rs  steering.rs  targeting.rs
engine/src/agent/: core.rs  mod.rs  preferences.rs  subagent.rs  working_memory.rs
engine/src/agent/core/: apex.rs  callable.rs  dag.rs  events.rs  loop.rs  orchestration.rs  prompt.rs  result.rs  shortcuts.rs  tests.rs  tools.rs
engine/src/agent/working_memory/: tests.rs
engine/src/api/: gateway.rs  mod.rs  ws_client.rs
engine/src/api/gateway/: locks.rs  poller.rs  submission.rs  task.rs  tests.rs
engine/src/api/mcp/: mod.rs  sandbox.rs  spawner.rs
engine/src/api/server/: api.rs  auth.rs  completion.rs  mcp.rs  mod.rs  tls.rs  ws.rs
engine/src/channels/: manager.rs  mod.rs  telegram.rs
engine/src/channels/telegram/: api.rs  approvals.rs  polling.rs  tests.rs  types.rs
engine/src/cli/: agents.rs  approvals.rs  auth.rs  backup.rs  bootstrap.rs  brain.rs  browser.rs  channel.rs  commands.rs  config.rs  daemon.rs  database_path.rs  doctor.rs  extensions.rs  history.rs  hook.rs  init.rs  knowledge.rs  logs.rs  mcp.rs  memory.rs  migrate.rs  mod.rs  model.rs  output.rs  plugins.rs  policy.rs  remote.rs  repl.rs  replay.rs  run.rs  schedule.rs  secrets.rs  security.rs  service.rs  setup.rs  starters.rs  status.rs  task_view.rs  unlock.rs  (+3 more)
engine/src/cli/bootstrap/: agent.rs  gateway.rs  plugins.rs  providers.rs
engine/src/cli/brain/: check.rs  dispatch_family.rs  guide.rs  install.rs  list.rs  remove.rs  server.rs  status.rs  verify.rs
engine/src/cli/mcp/: mod.rs  scaffold.rs  serve.rs  servers.rs  (+1 more)
engine/src/config/: agent.rs  approvals.rs  brain.rs  browser.rs  channel.rs  core.rs  daemon.rs  defaults.rs  extensions.rs  gateway.rs  llm.rs  loadout.rs  memory.rs  metadata.rs  mod.rs  paths.rs  policy.rs  profile.rs  remote.rs  search.rs  secrets.rs  security.rs  steering.rs  telegram.rs  tools.rs  transport.rs  update.rs  voice.rs  wasm.rs  webui.rs
engine/src/db/: mod.rs
engine/src/hooks/: mod.rs
engine/src/llm/: anthropic.rs  custom.rs  gemini.rs  mod.rs  nvidia_nim.rs  ollama.rs  openai.rs  parser.rs  router.rs  types.rs
engine/src/memory/: mod.rs
engine/src/platform/: libraries.rs  lines.rs  linux.rs  macos.rs  mod.rs  paths.rs  windows.rs
engine/src/policy/: builtins.rs  loader.rs  manager.rs  mod.rs  resolver.rs  types.rs
engine/src/prompt/: mod.rs  types.rs
engine/src/runtime/: manifest.rs  mod.rs  native.rs  registry.rs  wasm.rs
engine/src/security/: approvals.rs  local_auth.rs  mod.rs  prompt_override.rs
engine/src/steering/: builtins.rs  loader.rs  mod.rs  resolver.rs  types.rs
engine/src/storage/: agent_runs.rs  auth.rs  extension_catalog.rs  installed_plugins.rs  knowledge.rs  managed_agents.rs  memory.rs  memory_audit.rs  mod.rs  pending.rs  plugins.rs  pool.rs  remote_discovery.rs  schedule.rs  tasks.rs  telegram_audit.rs  threads.rs
engine/src/system/: auto_update.rs  backup.rs  browser.rs  factory.rs  health.rs  identity.rs  knowledge.rs  logs.rs  memory.rs  metrics.rs  migrate.rs  mod.rs  onboarding.rs  remote.rs  runtime_state.rs  service_install.rs  services.rs  specs.rs  starter_catalog.rs  telemetry.rs  update_status.rs  voice.rs  web_search.rs  worker_presets.rs  workflow_runtime.rs  workflow_triggers.rs  zerotier.rs
engine/src/tools/: browser.rs  catalog.rs  dispatch.rs  filesystem.rs  mod.rs  registry.rs  schema.rs  terminal.rs  vision.rs
engine/tests/: agent_core_integration_test.rs  agent_core_test.rs  agent_working_memory_test.rs  approvals_evaluate_test.rs  approvals_rules_test.rs  approvals_types_extended_test.rs  browser_cdp_integration_test.rs  command_executor_integration_test.rs  command_executor_test.rs  config_channel_extended_test.rs  config_channel_test.rs  config_integration_test.rs  config_profile_test.rs  config_security_test.rs  crypto_extended_test.rs  crypto_test.rs  daemon_graceful_shutdown_test.rs  daemon_test.rs  db_integration_test.rs  dispatch_integration_test.rs  fs_guard_extended_test.rs  fs_guard_test.rs  gateway_test.rs  health_snapshot_test.rs  hybrid_execution_test.rs  injection_detector_integration_test.rs  injection_patterns_test.rs  integration_tests.rs  llm_parser_test.rs  llm_types_extended_test.rs  llm_types_test.rs  local_auth_test.rs  local_brain_e2e_test.rs  local_brain_router_test.rs  mcp_echo_integration_test.rs  mcp_echo_server.py  mcp_integration_test.rs  mcp_sandbox_test.rs  mcp_spawner_test.rs  memory_extract_extended_test.rs  (+30 more)
engine/tests/helpers/: mock_llm.rs  mod.rs
sdk/: Cargo.toml  README.md
sdk/examples/: core_tool_example.rs  tool_usage.rs
sdk/src/: agent_handle.rs  agent_spec.rs  brain.rs  browser.rs  bus_handle.rs  config_handle.rs  control.rs  core_tool.rs  crypto_handle.rs  db_handle.rs  errors.rs  lib.rs  manifest.rs  network_handle.rs  permission.rs  plugin.rs  subagent.rs  task.rs  tool_io.rs  types.rs
sdk/tests/: property_tests.rs
tools/remote/: Cargo.toml  api_docs.html
tools/remote/src/: lib.rs
tools/screenshot/: Cargo.toml
tools/screenshot/src/: lib.rs
tools/telegram/: Cargo.toml
tools/telegram/src/: lib.rs
tools/ui-server/: Cargo.toml
tools/ui-server/src/: lib.rs
tools/voice-native/: Cargo.toml
tools/voice-native/src/: lib.rs
(+187 files in other folders)
