[package]
name = "brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sdk = { path = "../sdk" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["time", "macros"] }
candle-core = "0.9.2"
candle-nn = "0.9.2"
dirs.workspace = true
directories = "5.0.1"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
serde.workspace = true
serde_json.workspace = true
sysinfo = "0.33.0"
thiserror.workspace = true
tokenizers = "0.22.2"
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = { version = "0.9.2", features = ["metal"] }
