[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rove_engine"
path = "src/lib.rs"

[[bin]]
name = "rove"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tower = "0.4.13"
tokio-stream = "0.1.15"

sdk = { path = "../sdk" }
brain = { path = "../brain" }
filesystem = { path = "../tools/filesystem" }
screenshot = { path = "../tools/screenshot" }
terminal = { path = "../tools/terminal" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
sqlx.workspace = true
ed25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
extism.workspace = true
extism-manifest.workspace = true
wasmparser.workspace = true
clap.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
toml.workspace = true
regex.workspace = true
libloading.workspace = true
dirs.workspace = true
notify = "6.1"

# Hashing
sha2.workspace = true

# Additional dependencies
async-trait = "0.1"
async-stream = "0.3"
which = "6.0"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
self-replace = "1.5"
zeroize = "1.8"
rpassword = "5.0"
semver = "1.0"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
nucleo-matcher = "0.3"
keyring = "3.6.3"
dashmap = "6.1"
bincode = "1.3"
shlex = "1.3"
tempfile = "3.25"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
urlencoding = "2.1"
webauthn-rs = { version = "0.6.0-dev", features = ["danger-allow-state-serialisation"] }
cron = "0.16"
base64 = "0.22"
iroh = "0.98"
portable-pty = "0.9"

# Unix-specific dependencies for daemon management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
hyperlocal = "0.9"  # UDS transport for brain comms

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"  # OS keychain access

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }  # Linux keychain

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Security_Credentials",   # Credential Manager (secrets)
    "Win32_System_Pipes",           # Named Pipes (brain comms)
] }


[dev-dependencies]
proptest = "1.10.0"
wiremock = "0.6"

[features]
default = []
production = []
channel-dev = []

[build-dependencies]
# For embedding team public key at compile time
hex = "0.4"
chrono = "0.4"
base64 = "0.22"
