[package]
name = "sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Additional dependencies
async-trait = "0.1"

[dev-dependencies]
hex = "0.4"
proptest = "1.10.0"
