[package]
name = "api-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sdk = { path = "../../sdk" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Additional dependencies
dirs = "5.0"
toml = "0.8"
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35", features = ["full", "test-util"] }
