[package]
name = "screenshot"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native-tool-entry = []

[dependencies]
sdk = { path = "../../sdk" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
