[package]
name = "ui-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sdk = { path = "../../sdk" }

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Local WebSocket logic
axum = { version = "0.7", features = ["ws", "macros"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
