[package]
name = "voice-native"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native-tool-entry = []

[dependencies]
sdk = { path = "../../sdk" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
